[package]
name = "lnsocket"
version = "0.1.0"
repository = "https://github.com/jb55/lnsocket"
readme = "README.md"
build = "build.rs"
edition = "2018"

[lib]
name = "lnsocket"
path = "rust/lib.rs"
test = true
crate-type = ["lib"]

[dependencies]
libc = "0.2.150"
ffi_helpers = "0.3.0"

[build-dependencies]
cc = { version = "1.0.83", features = ["parallel"] }
pkg-config = "0.3.27"
bindgen = "0.69.1"
syntex_syntax = "0.59.1"
